# political-sharing-cartography

./: 01_Correspondence_Analysis.py  02_rotation.py  03_article_collection.py  03a_preprocessing.py  03c_compute_evals.R  04a_preprocessing.py  04b_stm.R  04d_evaluate.ipynb  05_01_plot_embedding.ipynb  05_02_plot_outlet_distribution_1D.ipynb  05_03_plot_outlet_distribution.ipynb  05_07_plot_metatopics.ipynb  05_08_plot_topics.ipynb  05a_plot_embedding.ipynb  05c_plot_outlet_distribution.ipynb  05d_plot_individual_articles.ipynb  05e_plot_story_mean_distribution.ipynb  05f_plot_metatopic_x_outlet.ipynb  05g_plot_metatopics.ipynb  05h_plot_topics.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements_tm_R.txt  requirements_tm_python.txt
data/: folder.txt  test.txt
